--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
 					<form>
 						<fieldset>
 						<input type="text" name="Name" placeholder="Your Name Here" minlength="4" required><br>
-						<input type="Email" name="Email" placeholder="Email Here eg. johndoe@anything.com" required><br>
+						<input type="Email" name="Email" placeholder="Email Here eg. something@anything.com" required><br>
 						<input type="text" name="Title" placeholder="Title Here"><br>
 						<textarea name="message" rows="10" cols="30" minlength="20" placeholder="please leave your thoughts here..."></textarea><br>
 						<input type="submit" value="Submit">
