--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 				input[type=submit], input[type=reset] {
 				width: 45%;
 				color: white;
-				background-color: blue;
+				background-color: midnightblue;
 				padding: 10px 24px;
 				border: none;
 				margin: 8px;
