--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 				}
 
 				input[type=submit]:hover, input[type=reset]:hover {
-					background-color: darkblue;
+					background-color: blue;
 				}
 				h1 {
 					background-color: #f8f8ff;
