--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 		<head>
 			<title>My first Code</title>
 			<style>
-				fieldset {
+				div {
 					border-radius: 5px;
 					background-color: lightgray;
 					padding: 20px;
 					width: 50%;
-
+					
 				}
 				
 				input[type=text], input[type=email], textarea {
@@ -24,8 +24,8 @@
 				input[type=submit], input[type=reset] {
 				width: 45%;
 				color: white;
-				background-color: blue;
-				padding: 10px 24px;
+				background-color: midnightblue;
+				padding: 12px 24px;
 				border: none;
 				margin: 8px;
 				cursor: pointer;
@@ -34,6 +34,7 @@
 
 				input[type=submit]:hover, input[type=reset]:hover {
 					background-color: darkblue;
+
 				}
 				h1 {
 					background-color: #f8f8ff;
@@ -51,7 +52,7 @@
 				}
 				th {
 					background-color: lightgray;
-					font-size: 25px;
+					font-size: 20px;
 					text-align: left;
 				}
 				tr {
@@ -60,9 +61,9 @@
 				}
 				td {
 					vertical-align: top;
-					font-size: 20px;
+					font-size: 17px;
 					text-align: left;
-					padding: 10px;
+					padding: 8px;
 					width: 30%;
 				}
 				p {
@@ -179,7 +180,7 @@
 						<td style="color:dodgerblue;text-align:center;"><strong><i>2018 Till Date:</i></strong>
 						</td>
 						<td><strong>Senior Accounts Officer</strong><br>Bursary Department.<br> University of Calabar, Calabar.</td>
-					</tr>
+						</tr>
 					<tr>
 					<td style="color:dodgerblue;text-align:center;"><strong><i>2015-2018:</i></strong>
 						</td>
@@ -240,9 +241,8 @@
 				<td>
 					<div>
 					<form>
-						<fieldset>
 						<input type="text" name="Name" placeholder="Your Name Here" minlength="4" required><br>
-						<input type="Email" name="Email" placeholder="Email Here eg. johndoe@anything.com" required><br>
+						<input type="Email" name="Email" placeholder="Email Here eg. something@anything.com" required><br>
 						<input type="text" name="Title" placeholder="Title Here"><br>
 						<textarea name="message" rows="10" cols="30" minlength="20" placeholder="please leave your thoughts here..."></textarea><br>
 						<input type="submit" value="Submit">
