--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 					background-color: white;
 					border: 2px solid #808080;
 					opacity: 0.95;
-					border-collapse: collapse;
+					border-collapse: none;
 					font-family: calibri;
 					width: 100%;
 					padding: 8px;
